--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <html>
+  <head>
+    <style>.profile-img {
+  width: 100px; /* Adjust as needed */
+  height: auto; /* Maintain aspect ratio */
+  border-radius: 50%; /* For circular profile image */
+}
+</style>
+  </head>
   <body><h1>I am Ushna Saniya</h1></body>
+  <img src="profile.jpg" alt="Profile Image" class="profile-img">
 </html>
