--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 </style>
   </head>
   <body><h1>I am Ushna Saniya</h1></body>
-  <img src="profile.jpg" alt="Profile Image" class="profile-img">
+  <img src="img/profile.jpg" alt="Profile Image" class="profile-img">
 </html>
