--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
   <head>
-    <style>.profile-img {
-  width: 100px; /* Adjust as needed */
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 50%; /* For circular profile image */
+    <style>
+  .profile-img {
+    width: 20%; /* Adjust as needed */
+    height: auto; /* Maintain aspect ratio */
+    max-width: 200px; /* Optional: limits maximum size */
+    border-radius: 50%;
+    object-fit: cover;
 }
+
 </style>
   </head>
   <body><h1>I am Ushna Saniya</h1></body>
