--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<html>
-  <head>
-    <title>Ushna Saniya</title>
-    <style>
-  .profile-img {
-    width: 20%; /* Adjust as needed */
-    height: auto; /* Maintain aspect ratio */
-    max-width: 200px; /* Optional: limits maximum size */
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-</style>
-  </head>
-  <body><h1>I am Ushna Saniya</h1></body>
-  <img src="img/profile.jpg" alt="Profile Image" class="profile-img">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Full-Screen Profile Image</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <img src="img/profile.jpg" alt="Profile Image" class="profile-img">
+</body>
 </html>
