--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full-Screen Profile Image</title>
+    <title>Ushna Saniya</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>I am Ushna Saniya</h1>
     <img src="img/profile.jpg" alt="Profile Image" class="profile-img">
 </body>
 </html>
